# SlimRaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: SlimRaster.h  bmp2texture.c  obj2mesh.c
src/SlimRaster/: app.h
src/SlimRaster/core/: init.h  types.h
src/SlimRaster/renderer/: pixel_shaders.h
src/SlimRaster/scene/: io.h  primitive.h
src/examples/: 1_clipping_interpolation.c  1_normal_maps.c  2_normal_maps.c  3_anti_aliasing.c
